@@ -1,7 +1,6 @@
 package com.ale.starblog.framework.core.controller;
 
 import cn.hutool.core.util.StrUtil;
-import com.ale.starblog.framework.common.constants.StringConstants;
 import com.ale.starblog.framework.common.domain.JsonResult;
 import com.baomidou.mybatisplus.core.toolkit.StringPool;
 import lombok.extern.slf4j.Slf4j;
@@ -57,7 +56,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleMissingPathVariable(MissingPathVariableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleMissingPathVariable(@NonNull MissingPathVariableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("请求缺少Path变量，名称：{}，类型：{}", ex.getVariableName(), ex.getParameter().getNestedParameterType().getName());
         return this.response(headers, "请求缺少Path变量[{}]，请检查", ex.getVariableName());
     }
@@ -67,7 +66,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleMissingServletRequestParameter(MissingServletRequestParameterException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleMissingServletRequestParameter(@NonNull MissingServletRequestParameterException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("请求缺少参数，名称：{}，类型：{}", ex.getParameterName(), ex.getParameterType());
         return this.response(headers, "请求缺少参数[{}]，请检查", ex.getParameterName());
     }
@@ -77,7 +76,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleMissingServletRequestPart(MissingServletRequestPartException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleMissingServletRequestPart(@NonNull MissingServletRequestPartException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("请求缺少Part参数[{}]", ex.getRequestPartName());
         return this.response(headers, "请求缺少Part参数[{}]，请检查", ex.getRequestPartName());
     }
@@ -87,7 +86,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleServletRequestBindingException(ServletRequestBindingException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleServletRequestBindingException(@NonNull ServletRequestBindingException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("ServletBinding异常：{}", ex.getMessage());
         return this.response(headers, "请求出现ServletBinding异常，请检查");
     }
@@ -97,8 +96,8 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleConversionNotSupported(ConversionNotSupportedException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-        log.warn("参数转换异常，无法将类型为[{}]的参数[{}]转为指定的类型[{}]", ex.getValue() == null ? StringConstants.NULL : ex.getValue().getClass().getName(), ex.getPropertyName(), ex.getRequiredType());
+    protected ResponseEntity<Object> handleConversionNotSupported(@NonNull ConversionNotSupportedException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+        log.warn("参数转换异常，无法将类型为[{}]的参数[{}]转为指定的类型[{}]", ex.getValue().getClass().getName(), ex.getPropertyName(), ex.getRequiredType());
         return this.response(headers, "请求出现参数转换异常，请检查");
     }
 
@@ -107,8 +106,8 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleTypeMismatch(TypeMismatchException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
-        log.warn("参数类型不匹配，参数[{}]要求的类型为[{}]，实际类型为：[{}]", ex.getPropertyName(), ex.getRequiredType(), ex.getValue() == null ? StringConstants.NULL : ex.getValue().getClass().getName());
+    protected ResponseEntity<Object> handleTypeMismatch(@NonNull TypeMismatchException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+        log.warn("参数类型不匹配，参数[{}]要求的类型为[{}]，实际类型为：[{}]", ex.getPropertyName(), ex.getRequiredType(), ex.getValue().getClass().getName());
         return this.response(headers, "请求出现参数类型不匹配异常，请检查");
     }
 
@@ -117,7 +116,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleHttpMessageNotReadable(@NonNull HttpMessageNotReadableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("读取请求数据发生异常：{}", ex.getMessage());
         return this.response(headers, StrUtil.startWith(ex.getMessage(), "Required request body is missing") ? "请求未传Body体数据，请检查" : "读取请求数据出现异常，请检查");
     }
@@ -127,26 +126,26 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleHttpMessageNotWritable(HttpMessageNotWritableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleHttpMessageNotWritable(@NonNull HttpMessageNotWritableException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("响应请求结果发生异常：{}", ex.getMessage());
         return this.response(headers, "响应请求结果出现异常，请检查");
     }
 
+    @NonNull
     @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(@NonNull MethodArgumentNotValidException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         MethodParameter parameter = ex.getParameter();
         BindingResult bindingResult = ex.getBindingResult();
         String message = bindingResult.getAllErrors().stream().map(objectError -> objectError.getObjectName() + "：" + objectError.getDefaultMessage()).collect(Collectors.joining("，"));
         log.warn("请求参数[{}({})]校验不通过，详细校验失败字段[{}]", parameter.getParameterName(), parameter.getParameterType().getName(), message);
 
-        if (bindingResult.hasFieldErrors() && bindingResult.getTarget() != null) {
+        if (bindingResult.hasFieldErrors()) {
             FieldError fieldError = bindingResult.getFieldError();
-            assert fieldError != null;
             String name = fieldError.getField();
 
             return this.response(headers, "参数校验不通过：" + name + StringPool.COLON + fieldError.getDefaultMessage());
         } else {
-            return this.response(headers, "参数校验不通过：" + bindingResult.getAllErrors().get(0).getDefaultMessage());
+            return this.response(headers, "参数校验不通过：" + bindingResult.getAllErrors().getFirst().getDefaultMessage());
         }
     }
 
@@ -155,7 +154,7 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @NonNull
     @Override
-    protected ResponseEntity<Object> handleNoHandlerFoundException(NoHandlerFoundException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
+    protected ResponseEntity<Object> handleNoHandlerFoundException(@NonNull NoHandlerFoundException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest request) {
         log.warn("响应请求[{} - {}]接口地址不存在", ex.getHttpMethod(), ex.getRequestURL());
         return this.response(headers, "请求地址不存在");
     }
@@ -163,8 +162,9 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
     /**
      * 异步请求超时异常处理
      */
+    @NonNull
     @Override
-    protected ResponseEntity<Object> handleAsyncRequestTimeoutException(AsyncRequestTimeoutException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest webRequest) {
+    protected ResponseEntity<Object> handleAsyncRequestTimeoutException(@NonNull AsyncRequestTimeoutException ex, @NonNull HttpHeaders headers, @NonNull HttpStatusCode status, @NonNull WebRequest webRequest) {
         log.warn("异步请求超时：{}", ex.getMessage());
         return this.response(headers, "异步请求超时，请检查");
     }
